# alp5

./: .gitignore  Aufgabe1.txt  dictionary  docu  startJavaRMI.sh  startRMIClient.sh  startRMIServer.sh
alp5_uebung4/src/: GenericProcess.java  Process.java  ReceiveException.java  SendException.java  SerializingException.java  UDPIn.java  UDPInImpl.java  UDPOut.java  UDPOutImpl.java
aufgabe1/: .project
aufgabe1/src/: StringBufferImpl.java  UsesBuffer.java
aufgabe2/: .project
aufgabe2/src/: Buffer.java  StringBufferSmart.java
aufgabe3/src/: Fork.java  Main.java
aufgabe3Remote/src/: CounterProcess.java  EchoProcess.java  Main.java
client/src/: Client.java  ProtocolDictionary.java  RMIClient.java  TCPClient.java
doc/: aufgabe1.txt  aufgabe2.txt  doc.txt  uml.dia
exampleSkript/: fib.hs
go/: build.sh
interfaces/: Connection.java  Dictionary.java  TCPConnection.java
server/src/: DictionaryImpl.java  ProtocolServer.java  RMIServer.java  TCPServer.java
txt/: aufgabe1.odt
uebung1/txt/: alp5_uebung1_doc.odt  aufgabe1.odt
uebung2/: README.txt  alp5_2.odt  buildSpellcheck.cabal
uebung2/check/: Main.hs  check.cabal  check.hs
uebung2/common/: Common.hs  common.cabal
uebung2/spellcheck/: Main.hs
uebung3/: doc.txt
uebung3/aufgabe1/: FirstFilter.hs  Main.hs  aufgabe1.cabal  (+2 more)
uebung6/: buildCheck2.cabal  buildSpellcheck.cabal
uebung6/check/Check/: Main.hs
uebung6/common/: Common.hs  common.cabal
uebung6/doc/: aufgaben1+2  doc.txt
uebung6/example/: example.txt
uebung6/src/: Filter.java  Fork.java  InToOut.java  LanguageChecker.java
(+62 files in other folders)
