Name: Check2
Version: 0.1.0.0
Cabal-Version: >= 1.8
Build-Type: Simple

Library
  exposed-modules: Common
  Hs-Source-Dirs: common
  build-depends: base ==4.5.*, directory >= 1.1.0.2, process >= 1.1.0.1

Executable check2
  Main-is: Main.hs
  other-modules: Check.Main
  hs-source-dirs: check
  build-depends: Check2, base ==4.5.*, regex-compat, process >= 1.1.0.1

--Executable spellcheck
  --Main-is: Main.hs
  --other-modules: Spellcheck.Main
  --hs-source-dirs: spellcheck
  --build-depends: Spellcheck, base ==4.5.*, regex-compat, process >= 1.1.0.1
